# gtkwave

./: meson.build
contrib/rtlbrowse/: jrb.h  meson.build
examples/: meson.build
lib/libfst/: fstapi.h
lib/libgtkwave/src/: gw-ghw-loader.c  meson.build
lib/libgtkwave/test/: meson.build
lib/libjrb/: jrb.h
src/: bitvec.c  ghw.c  gw-wave-view-traces.cpp  main.c  menu.cpp  meson.build  pixmaps.cpp  pixmaps.h  rc.cpp  savefile.cpp  tcl_helper.cpp
src/helpers/: meson.build  scopenav.cpp
